# rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: boleto_demo.rs  currency_demo.rs  date_utils_demo.rs  email_demo.rs  legal_nature_demo.rs  legal_process_demo.rs  license_plate_demo.rs  phone_demo.rs  pis_demo.rs  pis_test.rs  renavam_demo.rs  renavam_test.rs  voter_id_demo.rs
src/: boleto.rs  cep.rs  cnh.rs  cnpj.rs  cpf.rs  cpf2.rs  currency.rs  date_utils.rs  email.rs  legal_nature.rs  legal_process.rs  lib.rs  license_plate.rs  phone.rs  pis.rs  renavam.rs  voter_id.rs
