[package]
name = "brazilian_utils"
version = "0.1.0"
authors = ["Andreo Vieira <andreo.vieira@agibank.com.br>"]
edition = "2021"

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
